--- a/assets/admin/css/welcome.css
+++ b/assets/admin/css/welcome.css
@@ -2257,28 +2257,29 @@ html {
   border-color: #ddd;
 }
 
-.ncpi .pi-table .pi-table tr th {
+.ncpi .pi-table tr th {
   font-weight: 400;
   font-size: 12px;
   padding: 15px 0;
 }
 
-.ncpi .pi-table .pi-table tr td:first-child,
-.ncpi .pi-table .pi-table tr th:first-child {
+.ncpi .pi-table tr td:first-child,
+.ncpi .pi-table tr th:first-child {
   width: 60px;
   padding-left: 15px;
 }
 
-.ncpi .pi-table .pi-table tr td {
+.ncpi .pi-table tr td {
   padding: 15px 0;
   font-size: 14px;
 }
 
-.ncpi .pi-table .pi-table tr td .pi-status {
+.ncpi .pi-table tr td .pi-status {
   padding: 5px 15px;
   font-size: 10px;
   border-radius: 15px;
   color: #fff;
+  cursor: pointer;
 }
 
 .ncpi .pi-table input[type=checkbox] {
@@ -2286,7 +2287,7 @@ html {
   margin-top: 3px;
 }
 
-.ncpi .pi-table .pi-table tr {
+.ncpi .pi-table tr {
   border: 1px solid #CBD5E0;
 }
 
@@ -2342,7 +2343,11 @@ html {
   display: block;
 }
 
-.ncpi .info-table-content .edit-btn {
+.ncpi .pi-info-table-content {
+  margin-top: 20px;
+}
+
+.ncpi .pi-info-table-content .pi-edit-btn {
   padding: 5px 20px;
   font-size: 12px;
   border-radius: 10px 10px 0 0;
@@ -2352,21 +2357,21 @@ html {
   border-bottom: none;
 }
 
-.ncpi .info-table-content .edit-btn svg path {
+.ncpi .pi-info-table-content .pi-edit-btn svg path {
   fill: var(--text-color-blue);
   margin-right: 10px;
 }
 
-.ncpi .info-table-content .edit-btn svg {
+.ncpi .pi-info-table-content .pi-edit-btn svg {
   margin-right: 10px;
 }
 
-.ncpi .info-table-content table {
+.ncpi .pi-info-table-content table {
   border-collapse: collapse;
   width: 100%;
 }
 
-.ncpi .info-table-content table textarea {
+.ncpi .pi-info-table-content table textarea {
   border-radius: 5px;
   margin-top: 10px;
   outline: none;
@@ -2375,46 +2380,62 @@ html {
   width: 100%;
 }
 
-.ncpi .info-table-content table thead tr th {
+.ncpi .pi-info-table-content table thead tr th {
   text-align: left;
   padding: 12px;
 }
 
-.ncpi .info-table-content table thead tr th:first-child {
+.ncpi .pi-info-table-content table thead tr th:first-child {
   padding: 14px 20px;
   border-radius: 15px 0 0 0;
 }
 
-.ncpi .info-table-content table tbody tr td {
+.ncpi .pi-info-table-content table tbody tr td {
   padding: 12px;
+  width: 160px;
 }
 
-.ncpi .info-table-content table tbody tr td:first-child {
-  width: 35%;
+.ncpi .pi-info-table-content table tbody tr td:last-child {
+  padding: 12px;
+  width: 20px !important;
+}
+
+.ncpi .pi-info-table-content table tbody tr td:nth-last-child(2) {
+  width: 105px !important;
+}
+
+.ncpi .pi-info-table-content table tbody tr td:nth-child(3) input[type=number] {
+  width: 100px;
+}
+
+.ncpi .pi-info-table-content table tbody tr td:first-child {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
   padding: 15px 20px;
 }
 
-.ncpi .info-table-content table thead tr {
+.ncpi .pi-info-table-content table thead tr {
   background-color: #f8f8f8;
   border: 1px solid #CBD5E0;
 }
 
-.ncpi .info-table-content table thead tr th span {
+.ncpi .pi-info-table-content table thead tr th span {
   font-size: 10px;
   color: #4A5568;
 }
 
-.ncpi .info-table-content table td:first-child input[type=text] {
+.ncpi .pi-info-table-content table td:first-child input[type=text] {
   width: 100%;
 }
 
-.ncpi .info-table-content table tbody tr:nth-child(even) {
+.ncpi .pi-info-table-content table tbody tr:nth-child(even) {
   background-color: #F8F8F8;
 }
 
-.ncpi .info-table-content table td input[type=number],
-.ncpi .info-table-content table td input[type=text] {
-  width: 65px;
+.ncpi .pi-info-table-content table td input[type=number],
+.ncpi .pi-info-table-content table td input[type=text] {
+  width: 68px;
   padding: 6px 0 8px 10px;
   border: 1px solid #CBD5E0;
   border-radius: 4px;
@@ -2422,8 +2443,8 @@ html {
   outline: none;
 }
 
-.ncpi .info-table-content table td select {
-  width: 60px;
+.ncpi .pi-info-table-content table td select {
+  width: 70px;
   padding: 8px;
   border: 1px solid #CBD5E0;
   font-size: 10px;
@@ -2432,37 +2453,36 @@ html {
   margin-left: -7px;
 }
 
-.ncpi .info-table-content table tr td:last-child {
+.ncpi .pi-info-table-content table tr td:last-child {
   font-size: 12px;
 }
 
-.ncpi .info-table-content table tr td:last-child span {
-  margin-left: 10px;
+.ncpi .pi-info-table-content table tr td:last-child span {
   cursor: pointer;
   padding: 10px;
 }
 
-.ncpi .info-table-content table tr td:last-child span:hover svg path {
+.ncpi .pi-info-table-content table tr td:last-child span:hover svg path {
   fill: var(--text-color-blue);
 }
 
-.ncpi .info-table-content table tr td:nth-child(3) input[type=text],
-.ncpi .info-table-content table tr td:nth-child(2) input[type=text] {
+.ncpi .pi-info-table-content table tr td:nth-child(3) input[type=text],
+.ncpi .pi-info-table-content table tr td:nth-child(2) input[type=text] {
   float: left;
   font-size: 12px;
 }
 
-.ncpi .info-table-content table tr td:nth-child(3) input[type=nunber],
-.ncpi .info-table-content table tr td:nth-child(2) input[type=nunber] {
+.ncpi .pi-info-table-content table tr td:nth-child(3) input[type=nunber],
+.ncpi .pi-info-table-content table tr td:nth-child(2) input[type=nunber] {
   border-radius: 4px 0 0 4px;
 }
 
-.ncpi .info-table-content table tr td:nth-child(3) select,
-.ncpi .info-table-content table tr td:nth-child(2) select {
+.ncpi .pi-info-table-content table tr td:nth-child(3) select,
+.ncpi .pi-info-table-content table tr td:nth-child(2) select {
   border-radius: 0 4px 4px 0;
 }
 
-.ncpi .info-table-content button {
+.ncpi .pi-info-table-content button {
   width: 100%;
   border-radius: 0 0 15px 15px !important;
   color: #1A202C !important;
@@ -2478,16 +2498,16 @@ html {
 .ncpi .pi-calculation table tr:first-child td:first-child {
   font-size: 14px;
   font-weight: 700;
-  text-align: right;
 }
 
 .ncpi .pi-calculation table tr:last-child {
   border-radius: 8px;
-  position: relative;
+  background-color: #edf2f7;
 }
 
 .ncpi .pi-calculation table tr:last-child td {
-  text-align: right;
+  position: relative;
+  right: 2px;
 }
 
 .ncpi .pi-calculation table tr td {
@@ -2498,18 +2518,18 @@ html {
   margin-right: 10px;
 }
 
-.ncpi .pi-calculation table input[type=text] {
+.ncpi .pi-calculation table input[type=number] {
   width: 70px;
   padding: 8px;
   border-radius: 5px;
   border: none;
   background-color: #f8f8f8;
-  padding-left: 30px;
   margin-left: 5px;
+  outline: none;
 }
 
-.ncpi .pi-calculation table inputl[readonly] {
-  background-color: #edf2f7;
+.ncpi input[type=number][readonly] {
+  background-color: #cbd5e0 !important;
 }
 
 .pi-calculation {
@@ -2591,7 +2611,7 @@ html {
   font-size: 16px;
 }
 
-.pi-breadcrumb ul li.active {
+.pi-breadcrumb ul li.pi-active {
   color: #a7a7a7;
 }
 
@@ -2655,6 +2675,7 @@ html {
 .ncpi .pi-overlay:target, .ncpi .pi-show {
   visibility: visible;
   opacity: 1;
+  z-index: 99;
 }
 
 .ncpi .pi-popup-content {
@@ -2762,15 +2783,15 @@ html {
 /*-------------------------------------------------------------- 
 # tabs
 --------------------------------------------------------------*/
-[data-tab-content] {
+.ncpi [data-tab-content] {
   display: none;
 }
 
-.active[data-tab-content] {
+.ncpi .active[data-tab-content] {
   display: block;
 }
 
-.pi-tabs {
+.ncpi .pi-tabs {
   display: flex;
   justify-content: space-between;
   list-style-type: none;
@@ -2780,7 +2801,7 @@ html {
   margin-bottom: 50px;
 }
 
-.pi-tabs:before {
+.ncpi .pi-tabs:before {
   content: "";
   position: absolute;
   height: 2px;
@@ -2790,31 +2811,31 @@ html {
   left: 5%;
 }
 
-.pi-tab {
+.ncpi .pi-tab {
   cursor: pointer;
   color: #718096;
   font-weight: 500;
   font-size: 14px;
 }
 
-.pi-tab.active span {
+.ncpi .pi-tab.active span {
   border: 2px solid #4C6FFF !important;
 }
 
-.pi-tab.active {
+.ncpi .pi-tab.active {
   color: var(--bg-color-black);
   font-weight: 700;
 }
 
-.pi-tab span:hover {
+.ncpi .pi-tab span:hover {
   border: 2px solid #4C6FFF !important;
 }
 
-.pi-tab:hover {
+.ncpi .pi-tab:hover {
   color: var(--bg-color-black);
 }
 
-.pi-tabs-content .pi-tabs li span {
+.ncpi .pi-tabs-content .pi-tabs li span {
   width: 45px;
   height: 45px;
   background-color: #F4F4F4;
