--- a/src/admin/js/react/inv-template/scss/all.scss
+++ b/src/admin/js/react/inv-template/scss/all.scss
@@ -25,21 +25,28 @@
   }
   
   .pi-inv {
-	background-color: #fff;
-  }
-  
-  .pi-inv {
 	max-width: 794px;
 	margin: 0 auto;
+	background-color: #fff;
+	/* ==== invoece to address */
+	/* pi-banking wrap */
+	/* pi-note wrap */
   }
-  
-  .pi-hedear {
+  .pi-inv .pi-bg-one {
+	background-color: #8EB538;
+  }
+  .pi-inv .pi-bg-two {
+	background-color: #424449;
+  }
+  .pi-inv .pi-bg-4th {
+	background-color: var(--pi-inv-text-4th);
+  }
+  .pi-inv .pi-hedear {
 	margin-top: 10px;
 	display: flex;
 	justify-content: space-between;
   }
-  
-  .pi-from address {
+  .pi-inv .pi-from address {
 	font-family: Inter;
 	font-style: normal;
 	font-weight: 600;
@@ -49,48 +56,53 @@
 	margin-bottom: 36px;
 	margin-top: 18px;
   }
-  .pi-from address span, .pi-from address a {
+  .pi-inv .pi-from address span, .pi-inv .pi-from address a {
 	font-weight: 500;
   }
-  
-  .pi-from-date p {
+  .pi-inv .pi-from-date p {
 	font-family: Inter;
 	font-style: normal;
 	font-weight: 600;
 	font-size: var(--pi-inv-small);
 	line-height: 200%;
   }
-  .pi-from-date p span {
-	font-weight: 500;
+  .pi-inv .pi-from-date p span {
+	font-weight: 400;
   }
-  
-  .pi-from-time {
+  .pi-inv .pi-from-time {
 	display: flex;
 	-moz-column-gap: 18px;
 		 column-gap: 18px;
   }
-  
-  /* ==== invoece to address */
-  .pi-to-logo h2 {
+  .pi-inv .pi-inv-title h2 {
 	font-family: Inter;
 	font-style: normal;
 	font-weight: bold;
 	font-size: 30px;
 	line-height: 100%;
-	color: var(--pi-inv-secondary);
+	color: var(--pi-inv-text-4th);
 	margin-bottom: 18px;
 	text-transform: uppercase;
   }
-  
-  .pi-to p {
+  .pi-inv .pi-to p {
+	font-style: normal;
+	font-weight: 500;
+	font-size: var(--pi-inv-small);
+	line-height: 200%;
+	color: var(--pi-inv-text-3th);
+	font-family: Inter;
+	letter-spacing: 0.07px;
+  }
+  .pi-inv .pi-to h6 {
 	font-style: normal;
 	font-weight: bold;
 	font-size: var(--pi-inv-small);
 	line-height: 200%;
 	color: var(--pi-inv-text-3th);
+	font-family: Inter;
+	letter-spacing: 0.07px;
   }
-  
-  .pi-to address {
+  .pi-inv .pi-to address {
 	font-family: Inter;
 	font-style: normal;
 	font-weight: 600;
@@ -100,19 +112,17 @@
 	margin-bottom: 36px;
 	margin-top: 5px;
   }
-  .pi-to address p, .pi-to address a {
-	font-weight: 500;
+  .pi-inv .pi-to address p, .pi-inv .pi-to address a, .pi-inv .pi-to address span {
+	font-weight: 400;
 	margin-top: -5px;
   }
-  
-  .pi-items-table table {
+  .pi-inv .pi-items-table table {
 	border-spacing: 0;
 	width: 100%;
 	margin-top: 30px;
 	margin-bottom: 24px;
   }
-  
-  .pi-items-table table thead th {
+  .pi-inv .pi-items-table table thead th {
 	padding: 10px;
 	font-family: Inter;
 	font-style: normal;
@@ -121,8 +131,7 @@
 	line-height: 140%;
 	text-align: left;
   }
-  
-  .pi-items-table table td {
+  .pi-inv .pi-items-table table td {
 	font-family: Inter;
 	font-style: normal;
 	font-weight: 600;
@@ -131,24 +140,20 @@
 	padding: 15px 10px;
 	color: var(--pi-inv-text-3th);
   }
-  .pi-items-table table td span {
+  .pi-inv .pi-items-table table td span {
 	color: var(--pi-inv-text-5th);
-	font-weight: 500;
+	font-weight: 400;
   }
-  
-  /* pi-banking wrap */
-  .pi-bank-info {
+  .pi-inv .pi-bank-info {
 	margin-bottom: 35px;
   }
-  
-  .pi-bank-info {
+  .pi-inv .pi-bank-info {
 	display: flex;
 	justify-content: space-between;
 	-moz-column-gap: 30px;
 		 column-gap: 30px;
   }
-  
-  .pi-bank-info h4 {
+  .pi-inv .pi-bank-info h4 {
 	font-family: Inter;
 	font-style: normal;
 	font-weight: bold;
@@ -156,12 +161,10 @@
 	line-height: 140%;
 	color: #1A202C;
   }
-  
-  .pi-bank-info table {
+  .pi-inv .pi-bank-info table {
 	margin-top: 18px;
   }
-  
-  .pi-bank-info table th {
+  .pi-inv .pi-bank-info table th {
 	text-align: left;
 	padding-right: 20px;
 	padding-left: 0;
@@ -173,8 +176,7 @@
 	color: var(--pi-inv-text-primary);
 	padding-bottom: 4px;
   }
-  
-  .pi-bank-info table td {
+  .pi-inv .pi-bank-info table td {
 	font-family: Inter;
 	font-style: normal;
 	font-weight: normal;
@@ -184,17 +186,14 @@
 	text-align: left;
 	padding-bottom: 4px;
   }
-  
-  .pi-amounting table {
+  .pi-inv .pi-amounting table {
 	border-spacing: 0;
 	width: 210px;
   }
-  
-  .pi-amounting table tr.pi-before-total th {
+  .pi-inv .pi-amounting table tr.pi-before-total th {
 	padding-bottom: 10px;
   }
-  
-  .pi-amounting table th {
+  .pi-inv .pi-amounting table th {
 	font-family: Inter;
 	font-style: normal;
 	font-weight: bold;
@@ -203,28 +202,22 @@
 	color: var(--pi-inv-text-primary);
 	padding-left: 28px;
   }
-  
-  .pi-amounting .pi-table-bg th {
+  .pi-inv .pi-amounting .pi-table-bg th {
 	color: var(--pi-inv-white);
 	padding: 6px;
 	padding-left: 28px;
 	padding-right: 10px;
   }
-  
-  .pi-amounting .pi-table-bg td {
+  .pi-inv .pi-amounting .pi-table-bg td {
 	color: var(--pi-inv-white);
 	line-height: 140%;
-	padding: 6px;
   }
-  
-  /* pi-note wrap */
-  .pi-note-wrap {
+  .pi-inv .pi-note-wrap {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
   }
-  
-  .pi-terms h4 {
+  .pi-inv .pi-terms h4 {
 	margin-top: 15px;
 	font-style: normal;
 	font-weight: bold;
@@ -232,11 +225,10 @@
 	line-height: 200%;
 	color: var(--pi-inv-text-secondary);
   }
-  
-  .pi-terms ul {
+  .pi-inv .pi-terms ul {
 	list-style-type: dot;
   }
-  .pi-terms ul li {
+  .pi-inv .pi-terms ul li {
 	font-family: Inter;
 	font-style: normal;
 	font-weight: normal;
@@ -245,12 +237,10 @@
 	color: var(--pi-inv-text-5th);
 	margin-left: 15px;
   }
-  
-  .mt-35 {
+  .pi-inv .mt-35 {
 	margin-top: 35px;
   }
-  
-  .pi-note h4 {
+  .pi-inv .pi-note h4 {
 	font-family: Inter;
 	font-style: normal;
 	font-weight: bold;
@@ -258,8 +248,7 @@
 	line-height: 150%;
 	color: var(--pi-inv-text-secondary);
   }
-  
-  .pi-note p {
+  .pi-inv .pi-note p {
 	font-family: Inter;
 	font-style: normal;
 	font-weight: normal;
@@ -267,164 +256,252 @@
 	line-height: 200%;
 	color: var(--pi-inv-text-5th);
   }
-  
-  .pi-sign {
+  .pi-inv .pi-sign {
 	text-align: center;
 	margin-right: 60px;
   }
-  
-  .pi-sign h4 {
+  .pi-inv .pi-sign h4 {
 	font-style: normal;
 	font-weight: bold;
 	font-size: var(--pi-inv-medium);
 	line-height: 200%;
 	color: var(--pi-inv-text-secondary);
   }
-  
-  .pi-border {
+  .pi-inv .pi-border {
 	border: 0.5px solid #A0AEC0;
 	margin: 0 -30px;
 	margin-top: 8px;
   }
-/* ====template one===*/
-.pi-inv-one .pi-body {
+
+  .pi-inv {
+	/* ====template one===*/
+	/* ====template two===*/
+	/* ====template three===*/
+	/* ====template four===*/
+	/* ====template five===*/
+  }
+  .pi-inv .pi-inv-one .pi-body {
 	margin: 0 35px;
   }
-  
-  .pi-inv-one .pi-hedear {
+  .pi-inv .pi-inv-one .pi-hedear {
 	padding-top: 80px;
   }
-  
-  .pi-inv-one .pi-to-logo h2 {
-	color: var(--pi-inv-text-4th);
-  }
-  
-  .pi-inv-one .pi-items-table table thead {
+  .pi-inv .pi-inv-one .pi-items-table table thead {
 	background: #E6E6E6;
   }
-  
-  .pi-inv-one .pi-items-table table tbody tr:nth-child(odd) {
+  .pi-inv .pi-inv-one .pi-items-table table tbody tr:nth-child(odd) {
 	background-color: #F9F9F9;
   }
-  
-  .pi-inv-one tr.pi-table-bg {
+  .pi-inv .pi-inv-one tr.pi-table-bg {
 	background: #4F4F4F;
 	color: var(--pi-inv-white);
   }
-  
-  .pi-inv-one .pi-note-wrap {
+  .pi-inv .pi-inv-one .pi-note-wrap {
 	padding-bottom: 55px;
   }
-  
-  /* ====template two===*/
-  .pi-inv-two .pi-top-shape svg {
+  .pi-inv .pi-inv-two .pi-top-shape svg {
 	width: 100%;
   }
-  
-  .pi-inv-two .pi-top-shape svg path {
+  .pi-inv .pi-inv-two .pi-top-shape svg path {
 	fill: var(--pi-inv-primary);
   }
-  
-  .pi-inv-two .pi-body {
+  .pi-inv .pi-inv-two .pi-body {
 	margin: 0 35px;
   }
-  
-  .pi-inv-two .pi-to-logo h2 {
-	color: var(--pi-inv-text-4th);
-  }
-  
-  .pi-inv-two .pi-items-table table thead {
+  .pi-inv .pi-inv-two .pi-items-table table thead {
 	background-color: var(--pi-inv-primary);
 	color: var(--pi-inv-white);
   }
-  
-  .pi-inv-two .pi-items-table table tbody tr:nth-child(even) {
+  .pi-inv .pi-inv-two .pi-items-table table tbody tr:nth-child(even) {
 	background-color: #EDF2F7;
   }
-  
-  .pi-inv-two tr.pi-table-bg {
+  .pi-inv .pi-inv-two .pi-items-table table tbody tr:nth-child(odd) {
+	background-color: #F7FAFC;
+  }
+  .pi-inv .pi-inv-two tr.pi-table-bg {
 	background-color: var(--pi-inv-primary);
   }
-  
-  .pi-inv-two .pi-footer-shape svg {
+  .pi-inv .pi-inv-two .pi-footer-shape svg {
 	margin-bottom: -4px;
   }
-  
-  .pi-inv-two .pi-footer-shape svg path {
+  .pi-inv .pi-inv-two .pi-footer-shape svg path {
 	width: 100%;
 	fill: var(--pi-inv-primary);
   }
-  
-  /* ====template three===*/
-  .pi-inv-three .pi-body {
+  .pi-inv .pi-inv-three .pi-body {
 	margin: 0 35px;
   }
-  
-  .pi-inv-three .pi-top-shape {
+  .pi-inv .pi-inv-three .pi-hedear {
+	margin-top: 10px;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+  }
+  .pi-inv .pi-inv-three .pi-top-shape {
 	padding-bottom: 11px;
 	position: relative;
   }
-  
-  .pi-inv-three .pi-top-shape .pi-shape1 {
-	-webkit-clip-path: polygon(1% 1%, 100% 0, 85% 12%, 12% 12%, 12% 86%, 0 100%);
-			clip-path: polygon(1% 1%, 100% 0, 85% 12%, 12% 12%, 12% 86%, 0 100%);
+  .pi-inv .pi-inv-three .pi-top-shape .pi-shape1 {
+	-webkit-clip-path: polygon(1% 1%, 100% 0, 85% 12%, 13% 12%, 12% 86%, 0 100%);
+			clip-path: polygon(1% 1%, 100% 0, 85% 12%, 13% 12%, 12% 86%, 0 100%);
 	background-color: var(--pi-inv-secondary);
 	width: 170px;
 	height: 170px;
 	position: absolute;
-	top: 0px;
-	left: -35px;
+	top: -2px;
 	z-index: 10;
+	left: -36px;
   }
-  
-  .pi-inv-three .pi-top-shape .pi-shape2 {
+  .pi-inv .pi-inv-three .pi-top-shape .pi-shape2 {
 	-webkit-clip-path: circle(50% at 25% 30%);
-			clip-path: circle(50% at 25% 30%);
+	clip-path: circle(50% at 25% 30%);
 	background-color: var(--pi-inv-secondary);
 	width: 33px;
 	height: 33px;
 	position: absolute;
 	top: 8px;
-	left: -25px;
+	left: -22px;
 	z-index: 10;
   }
-  
-  .pi-inv-three .pi-top-shape .pi-shape3 {
-	-webkit-clip-path: polygon(1% 1%, 100% 0, 85% 12%, 12% 12%, 12% 86%, 0 100%);
-			clip-path: polygon(1% 1%, 100% 0, 85% 12%, 12% 12%, 12% 86%, 0 100%);
+  .pi-inv .pi-inv-three .pi-top-shape .pi-shape3 {
+	-webkit-clip-path: polygon(1% 1%, 100% 0, 85% 11%, 11% 11%, 11% 86%, 0 100%);
+			clip-path: polygon(1% 1%, 100% 0, 85% 11%, 11% 11%, 11% 86%, 0 100%);
 	background-color: #E2E8F0;
 	width: 187px;
 	height: 187px;
 	position: absolute;
-	top: 0px;
-	left: -35px;
+	top: -2px;
 	z-index: 0;
+	left: -36px;
   }
-  
-  .pi-inv-three .pi-hedear {
+  .pi-inv .pi-inv-three .pi-hedear {
 	margin-top: 50px;
   }
-  
-  .pi-inv-three .pi-items-table table thead {
+  .pi-inv .pi-inv-three .pi-inv-title h2 {
+	color: var(--pi-inv-secondary);
+	text-align: center;
+  }
+  .pi-inv .pi-inv-three .pi-items-table table thead {
 	background-color: #E2E8F0;
   }
-  
-  .pi-inv-three .pi-items-table table tbody tr:nth-child(even) {
+  .pi-inv .pi-inv-three .pi-items-table table tbody tr:nth-child(even) {
 	background-color: #E2E8F0;
   }
-  
-  .pi-inv-three tr.pi-table-bg {
+  .pi-inv .pi-inv-three tr.pi-table-bg {
 	background-color: var(--pi-inv-secondary);
   }
-  
-  .pi-inv-three .pi-to-logo {
+  .pi-inv .pi-inv-three .pi-inv-title {
 	margin-top: -40px;
   }
-  
-  .pi-inv-three .pi-footer-shape {
+  .pi-inv .pi-inv-three .pi-footer-shape {
 	position: relative;
-	right: 35px;
+	right: 34px;
 	bottom: 0;
 	transform: rotate(180deg);
   }
-	
+  .pi-inv .pi-inv-three .pi-note-wrap {
+	margin-bottom: 40px;
+  }
+  .pi-inv .pi-inv-four .pi-body {
+	margin: 0 35px;
+  }
+  .pi-inv .pi-inv-four .pi-from-logo {
+	display: inline-block;
+	padding: 16px 40px;
+	margin-left: -36px;
+  }
+  .pi-inv .pi-inv-four .pi-hedear {
+	display: flex;
+	justify-content: space-between;
+	padding-top: 53px;
+  }
+  .pi-inv .pi-inv-four .pi-to {
+	margin-top: -30px;
+  }
+  .pi-inv .pi-inv-four .pi-items-table table {
+	width: 106%;
+	margin-left: -23px;
+  }
+  .pi-inv .pi-inv-four .pi-to-bg {
+	margin-right: -36px;
+	padding: 16px 36px 16px 20px;
+  }
+  .pi-inv .pi-inv-four .pi-to-bg address {
+	color: var(--pi-inv-white);
+  }
+  .pi-inv .pi-inv-four .pi-to-bg p {
+	color: var(--pi-inv-white);
+  }
+  .pi-inv .pi-inv-four .pi-to-bg h6 {
+	color: var(--pi-inv-white);
+  }
+  .pi-inv .pi-inv-four .pi-items-table table thead th {
+	color: var(--pi-inv-white);
+	padding-left: 20px;
+  }
+  .pi-inv .pi-inv-four .pi-items-table table td {
+	padding-left: 20px;
+  }
+  .pi-inv .pi-inv-four .pi-items-table table tbody tr :first-child {
+	padding-left: 15px;
+	text-align: left;
+  }
+  .pi-inv .pi-inv-four tr.pi-table-bg :last-child {
+	margin-right: -35px;
+	display: block;
+	padding: 10px 20px;
+	margin-left: -20px;
+  }
+  .pi-inv .pi-inv-four .pi-footer-shape {
+	display: flex;
+	margin-top: 40px;
+  }
+  .pi-inv .pi-inv-four .pi-footer-shape .pi-shape1 {
+	width: 33.3%;
+	height: 10px;
+  }
+  .pi-inv .pi-inv-four .pi-footer-shape .pi-shape2 {
+	width: 33.3%;
+	opacity: 0.8;
+	height: 10px;
+  }
+  .pi-inv .pi-inv-four .pi-footer-shape .pi-shape3 {
+	width: 33.4%;
+	opacity: 0.6;
+	height: 10px;
+  }
+  .pi-inv .pi-inv-five .pi-body {
+	margin: -90px 35px;
+  }
+  .pi-inv .pi-inv-five .pi-hedear {
+	margin-top: 10px;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+  }
+  .pi-inv .pi-inv-five .pi-hedear .pi-inv-title {
+	margin-top: -45px;
+  }
+  .pi-inv .pi-inv-five .pi-top-shape svg {
+	width: 100%;
+	fill: #D7CA9C;
+  }
+  .pi-inv .pi-inv-five .pi-footer-shape svg {
+	fill: #D7CA9C;
+	margin-bottom: -4px;
+  }
+  .pi-inv .pi-inv-five .pi-items-table table thead {
+	background-color: #D7CA9C;
+	color: var(--pi-inv-white);
+  }
+  .pi-inv .pi-inv-five .pi-items-table table tbody tr:nth-child(even) {
+	background-color: #EDF2F7;
+  }
+  .pi-inv .pi-inv-five .pi-items-table table tbody tr:nth-child(odd) {
+	background-color: #F7FAFC;
+  }
+  .pi-inv .pi-inv-five tr.pi-table-bg {
+	background-color: #D7CA9C;
+  }
+  .pi-inv .pi-inv-five .pi-inv-title h2 {
+	text-align: center;
+  }
+  
