--- a/src/admin/js/react/components/payment/style.scoped.scss
+++ b/src/admin/js/react/components/payment/style.scoped.scss
@@ -8,12 +8,6 @@
   margin-top: 5px;
   margin-bottom: 0;
 }
-.ncpi .pi-tab-content #pi-stripe .pi-btn {
-  width: 100%;
-  background: #E1E8FF;
-  margin-top: 30px;
-  border-radius: 5px;
-}
 .ncpi .pi-tab-content #pi-bank ul {
   margin: 0;
 }
@@ -37,7 +31,7 @@
 .ncpi .pi-tab-content #pi-bank ul li .pi-edit span {
   background: #fff;
   display: inline-block;
-  padding: 2px 7px;
+  padding: 0px 7px;
   border-radius: 50%;
   cursor: pointer;
 }
@@ -77,4 +71,10 @@
   margin-top: 2px;
   margin-right: 5px;
   fill: var(--text-color-white);
+}
+.ncpi .pi-form-content.pi-form-style-two .pi-btn {
+  width: 100%;
+  background: #e1e8ff;
+  margin-top: 30px;
+  border-radius: 5px;
 }
