--- a/src/admin/js/react/components/payment/style.scoped.scss
+++ b/src/admin/js/react/components/payment/style.scoped.scss
@@ -8,6 +8,67 @@
   margin-top: 5px;
   margin-bottom: 0;
 }
+.ncpi .pi-tab-content .pi-payment-empty-content > div {
+  top: 50%;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.ncpi .pi-tab-content .pi-payment-empty-content {
+  position: relative;
+  border-radius: 8px;
+  padding: 25px;
+  height: 500px;
+  border: 1px solid #e2e8f0;
+}
+.ncpi .pi-tab-content .pi-payment-empty-content img {
+  display: block;
+  margin: auto;
+  margin-bottom: 20px;
+}
+.ncpi .pi-tab-content .pi-payment-empty-content span {
+  background: var(--bg-color-air-white);
+  padding: 16px;
+  display: inline-block;
+  padding: 30px 15px;
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 16px;
+  margin-bottom: 20px;
+  position: relative;
+}
+.ncpi .pi-tab-content .pi-payment-empty-content span:before {
+  content: "";
+  position: absolute;
+  top: -1px;
+  right: 0;
+  border-top: 35px solid white;
+  border-left: 35px solid var(--bg-color-air-white);
+}
+.ncpi .pi-tab-content .pi-payment-empty-content span:after {
+  content: "";
+  position: absolute;
+  bottom: 0px;
+  left: 0;
+}
+.ncpi .pi-tab-content .pi-payment-empty-content span svg {
+  display: block;
+  margin: auto;
+  margin-bottom: 10px;
+}
+.ncpi .pi-tab-content .pi-payment-empty-content .pi-btn {
+  display: block;
+  margin: auto;
+}
+.ncpi .pi-tab-content .pi-payment-empty-content .pi-btn svg path {
+  fill: var(--text-color-white);
+}
+.ncpi .pi-tab-content #pi-stripe,
+.ncpi .pi-tab-content #pi-bank {
+  border: 1px solid #e2e8f0;
+  padding: 25px;
+  border-radius: 8px;
+}
 .ncpi .pi-tab-content #pi-bank ul {
   margin: 0;
 }
