--- a/src/admin/js/react/inv-template/scss/1.scoped.scss
+++ b/src/admin/js/react/inv-template/scss/1.scoped.scss
@@ -1,29 +1,31 @@
 :root {
-    --pi-inv-primary: #E6E6E6;
-    --pi-inv-secondary: #4F4F4F;
-    --pi-inv-odd: #F9F9F9;
-  }
-  
-  .pi-inv {
-    /* ====template one===*/
-  }
-  .pi-inv .pi-inv-one .pi-body {
-    margin: 0 35px;
-  }
-  .pi-inv .pi-inv-one .pi-hedear {
-    padding-top: 50px;
-  }
-  .pi-inv .pi-inv-one .pi-items-table table thead {
-    background: var(--pi-inv-primary);
-  }
-  .pi-inv .pi-inv-one .pi-items-table table tbody tr:nth-child(odd) {
-    background-color: var(--pi-inv-odd);
-  }
-  .pi-inv .pi-inv-one tr.pi-table-bg {
-    background-color: var(--pi-inv-secondary);
-    color: var(--pi-inv-white);
-  }
-  .pi-inv .pi-inv-one .pi-note-wrap {
-    padding-bottom: 55px;
-  }
-  
+  --pi-inv-primary: #E6E6E6;
+  --pi-inv-secondary: #4F4F4F;
+  --pi-inv-odd: #F9F9F9;
+}
+
+.pi-inv {
+  /* ====template one===*/
+}
+.pi-inv .pi-inv-one .pi-body {
+  margin: 0 35px;
+}
+.pi-inv .pi-inv-one .pi-hedear {
+  padding-top: 50px;
+}
+.pi-inv .pi-inv-one .pi-items-table table thead {
+  background: var(--pi-inv-primary);
+}
+.pi-inv .pi-inv-one .pi-items-table table tbody tr:nth-child(even) {
+  background-color: var(--pi-inv-odd);
+}
+.pi-inv .pi-inv-one .pi-items-table table tbody tr:nth-child(odd) {
+  background-color: var(--pi-inv-odd);
+}
+.pi-inv .pi-inv-one tr.pi-table-bg {
+  background-color: var(--pi-inv-secondary);
+  color: var(--pi-inv-white);
+}
+.pi-inv .pi-inv-one .pi-note-wrap {
+  padding-bottom: 55px;
+}
